# gt4py

./: .gitignore  setup.cfg  tmp.py
src/gt4py/: gtscript.py  stencil_object.py
src/gt4py/analysis/: passes.py  transformer.py
src/gt4py/backend/: __init__.py  debug_backend.py  gt_backends.py  module_generator.py  numpy_backend.py
src/gt4py/backend/dace/: base_backend.py  cpu_backend.py  gpu_backend.py
src/gt4py/backend/dace/sdfg/: __init__.py  builder.py  transforms.py
src/gt4py/backend/gtc_backend/: common.py
src/gt4py/backend/gtc_backend/dace/: backend.py
src/gt4py/ir/: nodes.py
src/gt4py/storage/: storage.py  utils.py
src/gt4py/testing/: suites.py  utils.py
src/gtc/: daceir.py  oir.py
src/gtc/dace/: daceir_passes.py  expansion.py  nodes.py  oir_to_dace.py  utils.py
src/gtc/passes/: gtir_legacy_extents.py  gtir_pipeline.py  gtir_remove_regions.py  oir_pipeline.py  utils.py
src/gtc/passes/oir_dace_optimizations/: api.py  horizontal_execution_merging.py
src/gtc/passes/oir_optimizations/: horizontal_execution_merging.py  pruning.py  remove_regions.py  vertical_loop_merging.py
tests/: definition_setup.py  perftest.py
tests/_disabled/test_def_ir/: def_ir_stencil_definitions.py
tests/_disabled/test_iir/: iir_stencil_definitions.py  test_cpp_regression.py
tests/gtc_unstructured_tests/regression/cpp/fortran/: CMakeLists.txt
tests/test_integration/: stencil_definitions.py  test_code_generation.py  test_cpp_regression.py  test_dace_expansions.py  test_dace_parsing.py  test_suites.py  utils.py
tests/test_unittest/test_gtc/: test_dace.py  test_dace_utils.py
tests/test_unittest/test_gtc/test_passes/: test_dace_horizontal_execution_merging.py
